fix: update CORS configuration to use setAllowedOrigins and specify allowed headers